# ndk-samples

native-audio/app/src/main/cpp/: native-audio-jni.c
native-audio/app/src/main/java/com/example/nativeaudio/: NativeAudio.java
native-midi/app/src/main/cpp/: AppMidiManager.cpp  CMakeLists.txt  MidiEngine.cpp  MidiEngine.h  parameterLayout.cpp  parameterLayout.h
native-midi/app/src/main/cpp/engine/: Beat.cpp  Beat.h  CMakeLists.txt  MidiController.cpp  MidiController.h  MidiMessage.cpp  MidiMessage.h  ProjectSettings.h  RhythmModule.cpp  RhythmModule.h  Sequencer.cpp  Sequencer.h
native-midi/app/src/main/java/com/example/nativemidi/: AppMidiManager.java  MainActivity.java
native-midi/app/src/main/res/layout/: activity_main.xml
